# rust_actix_multiplayer_backend

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-10d55012c39c14b8b036417d21e7d669922afcf62e0cf5acb64a3e5b307dd7bd.json  query-28e71b54ff5603bc67aeb7819f30c276a59db7dba256919201a3c4e9a11ae904.json  query-2c6166badb52dad298814176b5868a40431c7844e1d04f3d7454a7dcd7109bf5.json  query-3d4fe0c2d0746ce3517ea4c681c0d45a1a1b370c7a46b23b689af71bb45b8fdc.json  query-40b8f5ae7da58a7b42d76c28bd3ebaf4da2be0fefeb03ce4c90ef24653f3083b.json  query-4dfc231a5032c94269f5175f7246a2299523a5a1cf41c0ac1e805fd9ce92265d.json  query-5191029cf7e65b5fe90270b9e283028fb024519ce77a792027e7f0e6c623edd1.json  query-673618cc7c1b2952fcf39f99841c7190ec1786ac544acfcdddc9c75bc4e21949.json  query-938ffde7b7902737d4f9f2dad0826360a9e90e1f576c6801c7ff092af414aafe.json  query-9917e238c673f9c936f714dfe126acda339deff4b034ad4bfb466df0b36207ef.json  query-9cca4e2c7483c4728c761d18bb97434567535ff107a8d7b5af4efc8a1eb524c8.json  query-a0da3f4e748695249e7a7209675315e8f75c8127d521d11432f4c43e7a100656.json  query-ac2d75ea35b91d637c3fb06d36a9dbdb2a804c57fd077383cfb42c8c4c0aae56.json  query-b90e57d25ca545578c223d1270b0b0b04166395a8db5fdc883d26a6a5a5fe01b.json  query-cb1386e45b3352b3642b2075d6401ec4961f78666a7fc1e22a887df2bcd25f9b.json  query-db660504def8b989f84455846d5e073333ce455bc1a4fa3ffd3eb5a6125cdfe1.json  query-dec1ed95360b3127f206e49e483bc46c6d82c06e676a39a38635ecbea22543dc.json  query-e26e238b17ef2a9989a966650d733df7651fc137fdae5b722388be4a8605d2e7.json  (+1 more)
src/: config.rs  jwt.rs  main.rs  (+4 more)
(+26 files in other folders)
