[package]
name = "rust-actix-multiplayer-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
argon2 = "0.5.3"
async-stream = "0.3.6"
bytes = "1.9.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures-core = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
log = "0.4.22"
password-hash = "0.5.0"
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "macros",
  "uuid",
  "chrono",
] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
